[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="shortcut icon" href="/ui/logo.jpg"/>
         <title>
-            My Index Page
+            Madi Profile
         </title>
         <link href="/ui/style.css" rel="stylesheeet"/>
     </head>
@@ -14,7 +14,12 @@
             <img src="/ui/madi.png" id="MADI" class="img-medium" alt="MADI bhaag gaya!:)"/>
         </div>
         <div>
-            
+            <font color="red" size="7" align="center">
+                Hiiiiiiiiiiiiiii
+            </font>
+            <font color="red" size="7" align="center">
+                I am Madi...<br>
+            </font>
         </div>
     </body>
 </html>
