[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -17,7 +17,7 @@
             <font color="red" size="7" align="center">
                 Hiiiiiiiiiiiiiii
             </font>
-            <font color="red" size="7" align="center">
+            <font color="green" size="7" align="center">
                 I am Madi...<br>
             </font>
         </div>
