[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -13,11 +13,11 @@
         <div class="center" id = "main" align= "center">
             <img src="/ui/madi.png" id="MADI" class="img-medium" alt="MADI bhaag gaya!:)"/>
         </div>
-        <div>
-            <font color="red" size="7" align="center">
-                Hiiiiiiiiiiiiiii
+        <div align="center">
+            <font color="red" size="7">
+                Hiiiiiiiiiiiiiii<br>
             </font>
-            <font color="green" size="7" align="center">
+            <font color="green" size="7">
                 I am Madi...<br>
             </font>
         </div>
