[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -17,12 +17,10 @@
         <hr/>
         <br><br>
         <div align="center">
-            <font color="red" size="7">
-                Hiiiiiiiiiiiiiii<br>
-            </font>
-            <font color="green" size="7">
-                I am Madi...<br>
-            </font>
+           <h1>Personal Details</h1><br>
+            Hii! I'm Madi. I like to code<br>
+            I am a Hasura.My webpage is <a href = "coco98.imad.hasura-app.io">this page</a><br/>
+            IO rama.
         </div>
     </body>
 </html>
