[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -19,7 +19,7 @@
         <div align="center">
            <h1>Personal Details</h1><br>
             Hii! I'm Madi. I like to code<br>
-            I am a Hasura.My webpage is <a href = "coco98.imad.hasura-app.io">this page</a><br/>
+            I am a Hasura.Son of Bigsura<br/>
             IO rama.
         </div>
     </body>
