[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -21,6 +21,6 @@
             Hii! I'm Madi. I like to code<br>
             I am a Hasura.Son of Bigsura<br/>
             IO rama.
-        </div>
+        </div><hr/>
     </body>
 </html>
