[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -16,7 +16,7 @@
         <br>
         <hr/>
         <br><br>
-        <div align="center">
+        <div align="center" class = "text">
            <h1>Personal Details</h1><br>
             Hii! I'm Madi. I like to code<br>
             I am a Hasura.Son of Bigsura<br/>
