[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -16,7 +16,7 @@
         <br>
         <hr/>
         <br><br>
-        <h1>Personal Details</h1><br>
+        <h1 align=center>Personal Details</h1><br>
         <div align="center" class="text">
            
             Hii! I'm Madi. I like to code<br>
