[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -16,12 +16,11 @@
         <br>
         <hr/>
         <br><br>
-        <h1>Personal Details</h1><br>
-        <div align="center" class="text">
-           
-            Hii! I'm Madi. I like to code<br>
-            I am a Hasura.Son of Bigsura<br/>
-            IO rama.
-        </div><hr/>
+        <div align="center">
+           <h1>Personal Details</h1>
+            <font color="green" size="7">
+                I am Madi...<br>
+            </font>
+        </div>
     </body>
 </html>
