[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -18,9 +18,21 @@
         <br><br>
         <div align="center">
            <h1>Personal Details</h1>
-            <font color="green" size="7">
+            <font color="green" size="4" face = "Lucida Calligraphy,Comic Sans MS,Lucida Console">
                 I am Madi...<br>
             </font>
+            <font color="blue" size="3">
+                A hasuraaa who loves to code.<br><hr/>
+            </font>
+            This is a list of my friendss:
+            <ul>
+                <li>Name 1</li>
+                <li>Name 2</li>
+                <li>Name 3</li>
+            </ul>
+            <br>
+            Your name can also be there!<br>Just enter it here:&nbsp;&nbsp;<input type="text" id="name" placeholder="Name">
+            &nbsp;&nbsp;<input type="submit" value="Submit">
         </div>
     </body>
 </html>
