[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -33,6 +33,6 @@
             </ul>
             <br>
             Your name can also be there!<br>Just enter it here:&nbsp;&nbsp;<input type="text" id="name" placeholder="Name">
-            &nbsp;&nbsp;<input type="submit" value="Submit">
+            &nbsp;&nbsp;<input type="submit" value="Submit" id="sub">
     </body>
 </html>
