[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -26,7 +26,7 @@
             </font>
             </div>
             This is a list of my friendss:
-            <ul id="ul">
+            <ul id="namelist">
                 
             </ul>
             <br>
